@@ -8,4 +8,6 @@ RUN apk add --update-cache mongodb-tools
 
 COPY target/sparkboard.jar target/sparkboard.jar
 
-CMD java -jar target/sparkboard.jar
+CMD java --add-opens=java.base/java.nio=ALL-UNNAMED \
+         --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+         -jar target/sparkboard.jar
